build/log/idf_py_stdout_output_4200
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] C:\Windows\system32\cmd.exe /C "cd /D C:\Users\Abhishek\P1\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe C:/Users/Abhishek/esp/v5.5.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/Abhishek/P1/build/bootloader/bootloader.bin"
Bootloader binary size 0x5240 bytes. 0x2dc0 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/error.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/error.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/Abhishek/P1/build/config -IC:/Users/Abhishek/P1/main -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/newlib/platform_include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/freertos/config/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/freertos/config/include/freertos -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/freertos/config/xtensa/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/freertos/esp_additions/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_hw_support/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_hw_support/dma/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_hw_support/debug_probe/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_hw_support/power_supply/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32s3/. -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32s3/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/heap/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/heap/tlsf -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/log/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/soc/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/soc/esp32s3 -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/soc/esp32s3/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/soc/esp32s3/register -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/hal/platform_port/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/hal/esp32s3/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/hal/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_rom/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_rom/esp32s3/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_rom/esp32s3 -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_common/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_system/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_system/port/soc -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_system/port/include/private -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/xtensa/esp32s3/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/xtensa/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/xtensa/deprecated_include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/lwip/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/lwip/include/apps -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/lwip/include/apps/sntp -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/lwip/lwip/src/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/lwip/port/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/lwip/port/freertos/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/Abhishek/P1/managed_components/espressif__esp-modbus/modbus/mb_transports -IC:/Users/Abhishek/P1/managed_components/espressif__esp-modbus/modbus/mb_controller/common/include -IC:/Users/Abhishek/P1/managed_components/espressif__esp-modbus/modbus/mb_objects/common -IC:/Users/Abhishek/P1/managed_components/espressif__esp-modbus/modbus/mb_ports/common -IC:/Users/Abhishek/P1/managed_components/espressif__esp-modbus/modbus/mb_ports/serial -IC:/Users/Abhishek/P1/managed_components/espressif__esp-modbus/modbus/mb_ports/tcp -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/driver/deprecated -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/driver/i2c/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/driver/touch_sensor/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/driver/twai/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/driver/touch_sensor/esp32s3/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_pm/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_ringbuf/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_driver_gpio/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_driver_pcnt/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_driver_gptimer/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_driver_spi/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_driver_mcpwm/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_driver_ana_cmpr/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_driver_i2s/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_driver_sdmmc/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/sdmmc/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_driver_sdspi/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_driver_sdio/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_driver_dac/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_driver_rmt/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_driver_tsens/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_driver_sdm/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_driver_i2c/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_driver_uart/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/vfs/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_driver_ledc/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_driver_parlio/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_driver_usb_serial_jtag/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_driver_twai/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_timer/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/nvs_flash/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_partition/include -IC:/Users/Abhishek/P1/components/can_network/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_adc/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_adc/interface -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_adc/esp32s3/include -IC:/Users/Abhishek/esp/v5.5.1/esp-idf/components/esp_adc/deprecated/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/Abhishek/P1=. -fmacro-prefix-map=C:/Users/Abhishek/esp/v5.5.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/error.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\error.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/error.c.obj -c C:/Users/Abhishek/P1/main/error.c
C:/Users/Abhishek/P1/main/error.c:43:6: error: conflicting types for 'display_error_msg'; have 'void(uint16_t,  const char *)' {aka 'void(short unsigned int,  const char *)'}
   43 | void display_error_msg(uint16_t error_no, const char *error_data)
      |      ^~~~~~~~~~~~~~~~~
In file included from C:/Users/Abhishek/P1/main/error.c:1:
C:/Users/Abhishek/P1/main/display.h:33:6: note: previous declaration of 'display_error_msg' with type 'void(uint16_t,  char *)' {aka 'void(short unsigned int,  char *)'}
   33 | void display_error_msg(uint16_t error_no,char *error_data);
      |      ^~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
